Mar 28, 2025
  hpo-phenotype: added loading of PMID ids into XREF_SOURCE field of annotations

Jan 02, 2025
  added log 'dbg_mouse' to capture warning messages from qc

Nov 19, 2024
  renamed github branch master to main

Aug 28, 2024
  renamed to 'phenotype-annotation-pipeline'

Aug 02, 2024
  human phenotype ontology: OMIM xrefs are now loaded as MIM xrefs

Jan 05, 2024
  upgraded to java 17

Aug 21, 2023
  human phenotype ontology: NEW FORMAT (genes_to_phenotype.txt) -- they added columns 'frequence' and 'disease_id'
     ncbi_gene_id [tab] gene_symbol [tab] hpo_id [tab] hpo_name [tab] frequency [tab] disease_id
     16      AARS1   HP:0002460      Distal muscle weakness  15/15   OMIM:613287
  hpo: now loading 'disease_id' into XREF_SOURCE field of annotations

Apr 25, 2023
  human phenotype ontology: removed no longer used code

Apr 21, 2023
  human phenotype ontology: NEW FORMAT (genes_to_phenotype.txt) -- they dropped last five columns from the source file
     * ncbi_gene_id [tab] gene_symbol [tab] hpo_id [tab] hpo_name
     * 10      NAT2    HP:0000007      Autosomal recessive inheritance

Jan 13, 2023
  updated build.gradle to be gradle 6.x + compatible

Oct 03, 2022
 fixed logging of dates

Jan 05, 2022
 updated log4j to avoid zero day exploit

May 13, 2021
 - MP annotator: tuned up summary logging

Mar 05, 2021
 - human phenotype ontology: changed the source to http://purl.obolibrary.org/obo/hp/hpoa/genes_to_phenotype.txt

Oct 02, 2020
 - source file change: MGI separates multiple values by '|', instead of ','

May 18, 2020
 - source file change, per RGDD-1776
   NEW FORMAT (genes_to_phenotype.txt)
     #Format: entrez-gene-id [tab] entrez-gene-symbol [tab] HPO-Term-ID [tab] HPO-Term-Name [tab] Frequency-Raw [tab] Frequency-HPO [tab] Additional Info from G-D source [tab] G-D source<tab>disease-ID for link
     2	A2M	HP:0001300	Parkinsonism			susceptibility	mim2gene	OMIM:104300

Mar 9, 2020