@@ -1,7 +1,7 @@
 <!DOCTYPE beans PUBLIC "-//SPRING//DTD BEAN//EN" "http://www.springframework.org/dtd/spring-beans.dtd">
 <beans>
 	<bean id="manager" class="edu.mcw.rgd.dataload.ImportManager">
-        <property name="version" value="phenotype-annotation-pipeline  -- build Mar 28, 2025" />
+        <property name="version" value="phenotype-annotation-pipeline  -- build Apr 03, 2025" />
 	</bean>
 
     <bean id="mgiPhenotype" class="edu.mcw.rgd.dataload.MGIPhenotypeImporter">
@@ -15,7 +15,7 @@
     </bean>
 
     <bean id="hpoPhenotype" class="edu.mcw.rgd.dataload.HPOPhenotypeImporter">
-        <property name="version" value="HPOPhenotypeImporter  -- build Mar 28, 2025" />
+        <property name="version" value="HPOPhenotypeImporter  -- build Apr 16, 2025" />
         <property name="fileURL" value="http://purl.obolibrary.org/obo/hp/hpoa/genes_to_phenotype.txt" />
         <property name="phenotypeFile" value="https://github.com/obophenotype/human-phenotype-ontology/releases/download/2025-03-03/phenotype.hpoa" />
         <property name="workDirectory" value="data" />
@@ -24,6 +24,6 @@
         <property name="refRgdId" value="8699517" />
         <property name="evidenceCode" value="IAGP" />
         <property name="minFileSize" value="500000" /><!--min file size of compressed source file -->
-        <property name="staleAnnotThreshold" value="5" /><!--in percent: if there are more annots to be deleted than the threshold, no annots will be deleted, and alert will be issued -->
+        <property name="staleAnnotThreshold" value="500" /><!--in percent: if there are more annots to be deleted than the threshold, no annots will be deleted, and alert will be issued -->
     </bean>
 </beans>
